refactor MockGeoPropertiesService and PropertiesGeoSearchController for improved property filtering and search functionality